@@ -14,6 +14,7 @@ Suggests:
     ggplot2,
     Hmisc,
     maps,
+    plyr,
     WDI
 License: GPL-3
 URL: https://github.com/briatte/qogdata
@@ -23,3 +24,4 @@ Collate:
     'qogmap.R'
     'utils.R'
     'merge.R'
+    'panel.R'
